--- a/practice.ipynb
+++ b/practice.ipynb
@@ -3425,7 +3425,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numpy no loops"
+    "### Numpy no loops\n",
+    "\n",
+    "https://realpython.com/numpy-array-programming/"
    ]
   },
   {
@@ -3566,6 +3568,311 @@
    "source": [
     "#the vectorized operation\n",
     "np.count_nonzero(x[:-1] < x[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0077363799791783094\n",
+      "0.0033214049763046205\n",
+      "2.3292492286760433\n",
+      "Speed difference: 2.3x\n"
+     ]
+    }
+   ],
+   "source": [
+    "#look at performance, the takes longer for the loop to run and calculate\n",
+    "from timeit import timeit\n",
+    "setup = 'from __main__ import count_transitions, x; import numpy as np'\n",
+    "num = 1000\n",
+    "t1 = timeit('count_transitions(x)', setup=setup, number=num)\n",
+    "t2 = timeit('np.count_nonzero(x[:-1] < x[1:])', setup=setup, number=num)\n",
+    "print(t1)\n",
+    "print(t2)\n",
+    "print(t1/t2)\n",
+    "print('Speed difference: {:0.1f}x'.format(t1 / t2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now looking at stock examples\n",
+    "prices = (20, 18, 14, 21, 13, 21, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min_px: 18, px: 18\n",
+      "max_px:0\n",
+      "min_px: 14, px: 14\n",
+      "max_px:0\n",
+      "min_px: 14, px: 21\n",
+      "max_px:7\n",
+      "min_px: 13, px: 13\n",
+      "max_px:7\n",
+      "min_px: 13, px: 21\n",
+      "max_px:8\n",
+      "min_px: 13, px: 15\n",
+      "max_px:8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#the loop way\n",
+    "def profit(prices):\n",
+    "    max_px = 0\n",
+    "    min_px = prices[0]\n",
+    "    for px in prices[1:]:\n",
+    "        min_px = min(min_px, px)\n",
+    "        print(f\"min_px: {min_px}, px: {px}\")\n",
+    "        max_px = max(px - min_px, max_px)\n",
+    "        print(f\"max_px:{max_px}\")\n",
+    "    return max_px\n",
+    "\n",
+    "profit(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#numpy way\n",
+    "#create some stock prices\n",
+    "prices = np.full(100, fill_value=np.nan)\n",
+    "#these array values provide the large peaks and or valleys in the stock prices\n",
+    "prices[[0, 25, 60, -1]] = [80., 30., 75., 50.]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[80. nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan 30. nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan 75. nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan 50.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(len(prices))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-d9e8cb5ca24e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#fill the array of nans with True or False, the tilde switches the True/False\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mis_valid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m~\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnan\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprices\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#fill the array of nans with True or False, the tilde switches the True/False\n",
+    "is_valid = ~np.isnan(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False  True False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      "  True False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(is_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The interpolate function connects the dots between the True points above\n",
+    "prices = np.interp(x=x, xp=x[is_valid], fp=prices[is_valid])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[80.         78.         76.         74.         72.         70.\n",
+      " 68.         66.         64.         62.         60.         58.\n",
+      " 56.         54.         52.         50.         48.         46.\n",
+      " 44.         42.         40.         38.         36.         34.\n",
+      " 32.         30.         31.28571429 32.57142857 33.85714286 35.14285714\n",
+      " 36.42857143 37.71428571 39.         40.28571429 41.57142857 42.85714286\n",
+      " 44.14285714 45.42857143 46.71428571 48.         49.28571429 50.57142857\n",
+      " 51.85714286 53.14285714 54.42857143 55.71428571 57.         58.28571429\n",
+      " 59.57142857 60.85714286 62.14285714 63.42857143 64.71428571 66.\n",
+      " 67.28571429 68.57142857 69.85714286 71.14285714 72.42857143 73.71428571\n",
+      " 75.         74.35897436 73.71794872 73.07692308 72.43589744 71.79487179\n",
+      " 71.15384615 70.51282051 69.87179487 69.23076923 68.58974359 67.94871795\n",
+      " 67.30769231 66.66666667 66.02564103 65.38461538 64.74358974 64.1025641\n",
+      " 63.46153846 62.82051282 62.17948718 61.53846154 60.8974359  60.25641026\n",
+      " 59.61538462 58.97435897 58.33333333 57.69230769 57.05128205 56.41025641\n",
+      " 55.76923077 55.12820513 54.48717949 53.84615385 53.20512821 52.56410256\n",
+      " 51.92307692 51.28205128 50.64102564 50.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#generate 100 random floats from a normal distribution and add them to the prices list to give it some volatility\n",
+    "prices += np.random.randn(len(prices)) * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.70179468, -0.59976003, -0.04288787])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#not sure what random number range is being produced here\n",
+    "#print(f\"{max(np.random.randn(100))} - {min(np.random.randn(100))}\")\n",
+    "np.random.randn(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[76.96022255 81.1261435  76.56441435 68.81734989 67.42357602 67.25605569\n",
+      " 67.50599678 65.32311446 64.64215703 63.67468208 61.16396767 55.56563791\n",
+      " 55.742881   51.75323246 51.25974498 51.14574394 49.73570805 46.78895403\n",
+      " 44.41008698 39.71242364 39.34016276 37.31244708 35.75981733 33.67984229\n",
+      " 34.84514724 29.56719652 31.88786424 27.88106117 34.11455416 34.60497593\n",
+      " 37.96794467 38.75814482 41.03121925 42.44863171 41.37805476 41.05678974\n",
+      " 42.16063768 45.39168483 47.73923644 47.41045329 49.09384196 50.39619252\n",
+      " 49.54749759 50.95231579 50.81765302 54.04892269 55.24710255 58.5805614\n",
+      " 58.26942613 62.53416078 61.7512916  63.57730255 65.92955398 62.38628061\n",
+      " 70.64709438 70.32036232 70.98780834 71.48417295 74.20723849 75.43675792\n",
+      " 74.9677535  72.37741698 82.57432347 71.43998685 71.03440371 74.22741037\n",
+      " 70.77836417 71.31956756 68.52043823 69.38693374 72.029498   70.24054178\n",
+      " 66.42643853 67.19660897 68.63953489 63.24072378 66.56665249 61.97446509\n",
+      " 59.95067311 61.24742812 60.84277696 59.48089867 59.01740754 59.59436835\n",
+      " 59.84015219 63.03801828 59.66763188 58.96657697 56.82748459 55.01638567\n",
+      " 57.73027017 54.24733422 51.08458174 53.62221786 53.75246223 50.75884283\n",
+      " 52.3210505  46.89740222 50.68082186 49.98861874]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Voila, our stock prices\n",
+    "print(prices)"
    ]
   }
  ],
