added rule 2 work to qViz

--- a/q_viz.ipynb
+++ b/q_viz.ipynb
@@ -538,7 +538,7 @@
     "    if newNum > sigUp:\n",
     "        print(f\"Rule 1 Violation. Upper Control Limit (UCL -- mean + 3SD) is {round(sigUp,1)}\")\n",
     "    elif newNum < sigDown:\n",
-    "        print(f\"Rule 1 Violation. Lower Control Limit (LCL mean - 3SD) is {round(sigDown,1)}\")\n",
+    "        print(f\"Rule 1 Violation. Lower Control Limit (LCL mean - 3SD) is {round(sigDown,1)}.\")\n",
     "    else:\n",
     "        myArr.append(newNum)\n",
     "        print(\"New datum added to list\")\n",
@@ -563,24 +563,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rule 2: Two out of three consecutive points fall beyond the 2σ-limit (in zone A or beyond), on the same side of the centerline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#myArr = [1,2,3,3,4,2,5,4]\n",
+    "myArr = np.random.randint(50, 100, size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myList = [3,4,3,6,5,4,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "themean = stat.mean(myList)\n",
+    "sd = stat.stdev(myList)\n",
+    "sigUp = themean + sd*2\n",
+    "sigDown = themean - sd*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myNP = np.array(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "above2 = myNP[-3:] > sigUp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "belo2 = myNP[-3:] < sigDown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.927922024247863\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([False, False, False])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "themean = stat.mean(myArr)\n",
-    "sd = stat.stdev(myArr)\n",
-    "sigUp = themean + sd*3\n",
-    "sigDown = themean - sd*-3\n",
-    "print(sigUp)"
+    "above2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "belo2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "above2.sum(axis=0) >= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#myArr = [1,2,3,3,4,2,5,4]\n",
+    "myArr = list(np.random.randint(50, 100, size=100))"
    ]
   },
   {
