added to rule 2

--- a/q_viz.ipynb
+++ b/q_viz.ipynb
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,21 +584,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rule 1 Violation. Lower Control Limit (LCL mean - 3SD) is 32.9.\n",
+      "Rule 1 Violation. Lower Control Limit (LCL mean - 3SD) is 32.0.\n",
       "Add to data set? (y/n) \n",
-      "n\n"
+      "n\n",
+      "Continue with monitoring (y/n)? \n",
+      "y\n"
      ]
     }
    ],
    "source": [
-    "rule1(myArr,5)"
+    "testRule1(myArr,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Should I keep going?/nn\n",
+      "Should I keep going?/nn\n",
+      "Should I keep going?/ny\n"
+     ]
+    }
+   ],
+   "source": [
+    "keepGoing = True\n",
+    "while keepGoing:\n",
+    "    question = input(\"Should I keep going? \\n\")\n",
+    "    if question == 'y':\n",
+    "        keepGoing = False"
    ]
   },
   {
@@ -610,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,19 +654,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "themean = stat.mean(myList)\n",
     "sd = stat.stdev(myList)\n",
-    "sigUp = themean + sd*2\n",
-    "sigDown = themean - sd*2"
+    "TwoSigUp = themean + sd*2\n",
+    "TwoSigDown = themean - sd*2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,46 +675,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "above2 = myNP[-3:] > sigUp"
+    "#Slice the numpy array and get the last three points, compare the array data to the upper 2 sigma limit, return true/false\n",
+    "above2 = myNP[-3:] > TwoSigUp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "belo2 = myNP[-3:] < sigDown"
+    "belo2 = myNP[-3:] < TwoSigDown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "above2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "belo2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#Add the array true/false values together, trues will be 1, falses zero\n",
     "above2.sum(axis=0) >= 2"
    ]
   },
