updated western electric rules

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -3955,6 +3955,7 @@
    ],
    "source": [
     "#Adds and collapses the third \"level\"\n",
+    "#1+2, 2+4, 2+3, etc.\n",
     "arr.sum(axis=2)"
    ]
   },
