--- a/q_viz.ipynb
+++ b/q_viz.ipynb
@@ -605,16 +605,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Should I keep going?/nn\n",
-      "Should I keep going?/nn\n",
-      "Should I keep going?/ny\n"
+      "Should I keep going? \n",
+      "y\n",
+      "Should I keep going? \n",
+      "n\n",
+      "Ok, thanks for playing!\n"
      ]
     }
    ],
@@ -622,7 +624,8 @@
     "keepGoing = True\n",
     "while keepGoing:\n",
     "    question = input(\"Should I keep going? \\n\")\n",
-    "    if question == 'y':\n",
+    "    if question == 'n':\n",
+    "        print(\"Ok, thanks for playing!\")\n",
     "        keepGoing = False"
    ]
   },
@@ -755,10 +758,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#testing whether there are two out of three consecutive numbers above the line\n",
+    "def testRule2(arr, newNum):\n",
+    "    themean = stat.mean(arr)\n",
+    "    sd = stat.stdev(arr)\n",
+    "    twoSigUp = themean + sd*2\n",
+    "    twoSigDown = themean - sd*2\n",
+    "    arr.append(newNum)\n",
+    "    clipped = np.array(arr)[-3:]\n",
+    "    above2 = clipped > twoSigUp\n",
+    "    below2 = clipped < twoSigDown\n",
+    "    print(f'low: {twoSigDown}, high: {twoSigUp}')\n",
+    "    if (above2.sum(axis=0) >= 2) or (below2.sum(axis=0) >= 2):\n",
+    "        print(\"Violation\")\n",
+    "        print(clipped)\n",
+    "    else:\n",
+    "        print(\"all good\")\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myList = [3,4,3,6,5,4,7,20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low: -4.763087625386872, high: 17.763087625386873\n",
+      "Violation\n",
+      "[ 7 20 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "testRule2(myList, 20)"
+   ]
   },
   {
    "cell_type": "code",
