finished final WE rule

--- a/q_viz.ipynb
+++ b/q_viz.ipynb
@@ -638,127 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#myArr = [1,2,3,3,4,2,5,4]\n",
-    "myArr = np.random.randint(50, 100, size=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myList = [3,4,3,6,5,4,7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "themean = stat.mean(myList)\n",
-    "sd = stat.stdev(myList)\n",
-    "TwoSigUp = themean + sd*2\n",
-    "TwoSigDown = themean - sd*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myNP = np.array(myList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Slice the numpy array and get the last three points, compare the array data to the upper 2 sigma limit, return true/false\n",
-    "above2 = myNP[-3:] > TwoSigUp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "belo2 = myNP[-3:] < TwoSigDown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "above2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "belo2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Add the array true/false values together, trues will be 1, falses zero\n",
-    "above2.sum(axis=0) >= 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +652,7 @@
     "    clipped = np.array(arr)[-3:]\n",
     "    above2 = clipped > twoSigUp\n",
     "    below2 = clipped < twoSigDown\n",
-    "    print(f'low: {twoSigDown}, high: {twoSigUp}')\n",
+    "    print(f'low: {round(twoSigDown,1)}, high: {round(twoSigUp,1)}')\n",
     "    if (above2.sum(axis=0) >= 2) or (below2.sum(axis=0) >= 2):\n",
     "        print(\"Violation\")\n",
     "        print(clipped)\n",
@@ -784,25 +664,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "myList = [3,4,3,6,5,4,7,20]"
+    "myList = [3,4,3,6,5,4,7,7]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "low: -4.763087625386872, high: 17.763087625386873\n",
-      "Violation\n",
-      "[ 7 20 20]\n"
+      "low: 1.6, high: 8.2\n",
+      "all good\n"
      ]
     }
    ],
@@ -821,33 +700,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rule 3: Four out of five consecutive points fall beyond the 1σ-limit (in zone B or beyond), on the same side of the centerline."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def testRule3(arr, newNum):\n",
+    "    themean = stat.mean(arr)\n",
+    "    sd = stat.stdev(arr)\n",
+    "    oneSigUp = themean + sd\n",
+    "    oneSigDown = themean - sd\n",
+    "    arr.append(newNum)\n",
+    "    clipped = np.array(arr)[-5:]\n",
+    "    above2 = clipped > oneSigUp\n",
+    "    below2 = clipped < oneSigDown\n",
+    "    print(f'low: {round(oneSigDown,1)}, high: {round(oneSigUp,1)}')\n",
+    "    if (above2.sum(axis=0) >= 4) or (below2.sum(axis=0) >= 4):\n",
+    "        print(\"Violation\")\n",
+    "        print(clipped)\n",
+    "    else:\n",
+    "        print(\"all good\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rule3List = [3,4,3,6,5,4,7,7,8,10,15,10,10,15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low: 3.7, high: 11.6\n",
+      "all good\n"
+     ]
+    }
+   ],
+   "source": [
+    "testRule3(rule3List,15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rule 4\tNINE consecutive points fall on the same side of the centerline (in zone C or beyond)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testRule4(arr, newNum):\n",
+    "    theMean = stat.mean(arr)\n",
+    "    sd = stat.stdev(arr)\n",
+    "    arr.append(newNum)\n",
+    "    clipped = np.array(arr)[-9:]\n",
+    "    above = clipped > theMean\n",
+    "    below = clipped < theMean\n",
+    "    print(f'mean:{round(theMean,1)}')\n",
+    "    if (above.sum(axis=0) >= 9) or (below.sum(axis=0) >= 9):\n",
+    "        print(\"Violation\")\n",
+    "        print(clipped)\n",
+    "    else:\n",
+    "        print(\"all good\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rule4List = [3,4,3,6,5,4,7,7,8,10,15,10,10,15,15,15,15,15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean:9.3\n",
+      "Violation\n",
+      "[15 10 10 15 15 15 15 15 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "testRule4(rule4List,15)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#want to check for violations\n",
-    "#if two consecutive samples are above the mean, flag the 2+ samples\n",
-    "#once it drops below the mean, clear the flag array\n",
-    "#remember, with plotly you can just pass an array of colors\n",
-    "#need to use stride tricks - or try to use stride tricks\n",
-    "abflags = []\n",
-    "belFlags = []\n",
-    "for num,index in enumerate(arr):\n",
-    "  print(index, num)\n",
-    "\n",
-    "\n",
-    "# plt.plot([1,2,3])\n",
-    "\n",
-    "# plt.savefig('plot.png')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
